--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QR Code Reader</title>
+  <title>QR Code Generator</title>
   <!-- Normalize File -->
   <link rel="stylesheet" href="./assets/css/normalize.css">
   <!-- Css File-->
